--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="Stack.js"></script>
-    <script src="Queue.js"></script>
+    <script type="module" src="index.js"></script>
 </body>
 </html>
